# nrf52dk-rtfm-gpios

./: Cargo.toml  README.md  jlink.gdb
.cargo/: config
src/: main.rs
