[package]
authors = ["chris ricketts <chris.ricketts@steribar.com>"]
edition = "2018"
readme = "README.md"
name = "nrf52dk-rtfm-gpios"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtfm = "0.5.0-beta.1"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.3"
nrf52832-hal = "0.8.1"

[[bin]]
name = "nrf52dk-rtfm-gpios"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
